--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,27 @@
-# Dependencies
+# Dépendances
 node_modules/
+
+# Next.js
 .next/
 out/
+build/
 
-# TypeScript
-*.ts
-*.tsx
-tsconfig.json
-next-env.d.ts
-lib/generated/
+# Environnement
+.env
+.env.local
+.env*.local
 
-# TypeScript
-*.ts
-*.tsx
-tsconfig.json
-next-env.d.ts
-lib/generated/
+# Vercel
+.vercel
+
+# Prisma
+prisma/.env
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS
+.DS_Store
+Thumbs.db
