--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "@prisma/client": "^6.9.0",
+    "@anthropic-ai/sdk": "^0.71.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.19.0",
     "bcryptjs": "^2.4.3",
     "lucide-react": "^0.263.1",
     "next": "^14.0.0",
@@ -19,7 +21,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
-    "prisma": "^6.9.0",
+    "prisma": "^6.19.0",
     "tailwindcss": "^3.3.5"
   }
 }
