--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.19.0",
     "bcryptjs": "^2.4.3",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.263.1",
     "next": "^14.0.0",
     "next-auth": "^4.24.13",
