--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@lemonsqueezy/lemonsqueezy.js": "^4.0.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.19.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
