--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.19.0",
     "@prisma/engines": "^7.0.1",
+    "@vercel/analytics": "^1.6.1",
     "bcryptjs": "^2.4.3",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
